# catora

./: CMakeLists.txt  README.md  package.xml  plugins.xml
config/: config.yaml  test.rviz
formations/: letter_c_200.txt  letter_t_200.txt  letter_u_200.txt
include/mrs_formation_reshaping/: .hungarian.hpp.swp  formation_reshaper.hpp  robot.hpp  robot_state.hpp  type_convertor.hpp
launch/: catora.launch
scripts/: call_formation_reshaping_request.py  call_get_assignment_srv.py  call_get_reshaping_trajectories_srv.py
src/: .formation.cpp.swp  formation_reshaper.cpp  formation_reshaping_nodelet.cpp  robot.cpp  robot_state.cpp  type_convertor.cpp
srv/: SrvGetAssignment.srv  SrvGetReshapingTrajectories.srv  SrvReshapeFormation.srv
